# ebf-trading-monorepo

./: Untitled.ipynb  pyproject.toml
EbfDomain/: README.md  pyproject.toml
EbfDomain/src/: id_base.py
EbfDomain/src/ebf_domain/: __init__.py
EbfDomain/src/ebf_domain/events/: domain_event.py  event_collection.py  event_source.py
EbfDomain/src/ebf_domain/money/: currency.py  money.py
EbfDomain/src/ebf_domain/rules/: common_rules.py  rule.py  rule_collection.py  validation_result.py  validator.py
EbfDomain/src/ebf_domain/specifications/: specification.py
EbfDomain/tests/: test_id_base.py
EbfDomain/tests/events/: test_domain_event.py  test_event_collection.py  test_event_infrastructure.py  test_event_source.py
EbfDomain/tests/events/helpers/: event_factory.py
EbfDomain/tests/money/: test_currency.py  test_money.py
EbfDomain/tests/rules/: test_common_rules.py  test_rule.py  test_rule_collection.py  test_validation_result.py  test_validator.py
EbfDomain/tests/specifications/: test_specification.py
EbfDomain/tests/specifications/helpers/: spec_helpers.py
EbfTrading/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
EbfTrading/resources/diagrams/: Trade design.puml
EbfTrading/resources/docs/: README.md
EbfTrading/resources/specs/: LEAP_Diagonal_Convergence_Accounting_Notes.docx  Position Mgt.docx  Use Cases.xlsx  design overview.docx
EbfTrading/src/ebf_trading/domain/: datetime_helpers.py
EbfTrading/src/ebf_trading/domain/value_objects/: contract_quantity.py  direction.py  option.py  order_type.py  ticker.py
EbfTrading/src/ebf_trading/domain/value_objects/options/: contract_quantity.py  expiration_date.py  option.py  option_type.py  strike.py  symbol_converter.py
EbfTrading/src/ebf_trading/domain/value_objects/options/symbol_conversion/: conversions.py
EbfTrading/tests/value_objects/: test_expiration_date.py  test_option_type.py  test_strike.py  test_ticker.py
EbfUtil/: .gitignore  README.md  current plan.docx  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
EbfUtil/src/ebf_core/: __init__.py
EbfUtil/src/ebf_core/cfgutil/: __init__.py  cfg_merger.py  cfg_service.py  enums.py
EbfUtil/src/ebf_core/cfgutil/handlers/: __init__.py  cfg_format_handler.py  json_handler.py  toml_handler.py  yaml_handler.py
EbfUtil/src/ebf_core/fileutil/: __init__.py  executable_finder.py  file_util.py  path_norm.py  pfl_NEW.py  project_file_locator.py  project_file_locator_OLD.py  user_file_locator.py
EbfUtil/src/ebf_core/guards/: __init__.py  guards.py
EbfUtil/src/ebf_core/miscutil/: string_helpers.py
EbfUtil/src/ebf_core/reflection/: attr_reflector.py  type_name.py
EbfUtil/src/ebfutil.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
EbfUtil/src/ebfutil/cfgutil/: __init__.py  cfg_merger.py  cfg_service.py  loader.py
EbfUtil/src/ebfutil/cfgutil/handlers/: __init__.py  json_handler.py  json_loader.py  toml_handler.py  toml_loader.py  yaml_handler.py  yaml_loader.py
EbfUtil/src/ebfutil/cfgutil/loaders/: __init__.py  cfg_format_handler.py  json_loader.py  toml_loader.py  yaml_loader.py
EbfUtil/src/ebfutil/fileutil/: file_util.py
EbfUtil/src/ebfutil/guards/: guards.py
EbfUtil/src/fileutil/: file_util.py
EbfUtil/src/guards/: __init__.py
EbfUtil/tests/ebf_core/cfgutil/: test_cfg_merger.py  test_enums.py
EbfUtil/tests/ebf_core/cfgutil/cfg_svc_tests/: test_api.py  test_cfg_service_paths.py  test_svc.py
EbfUtil/tests/ebf_core/cfgutil/cfg_svc_tests/handlers/json/: test_json_handler.py
EbfUtil/tests/ebf_core/cfgutil/cfg_svc_tests/handlers/toml/: test_toml_handler.py
EbfUtil/tests/ebf_core/cfgutil/cfg_svc_tests/handlers/yaml/: test_yaml_handler.py
EbfUtil/tests/ebf_core/cfgutil/fixtures/: cfg_svc_fixture.py  with_comments.yaml
EbfUtil/tests/ebf_core/fileutil/: test_executable_finder.py  test_file_util.py  test_path_norm.py  test_pfl_NEW.py  test_project_file_locator.py  test_project_file_locator_OLD.py  test_user_file_locator.py
EbfUtil/tests/ebf_core/guards/: test_guards.py
EbfUtil/tests/ebf_core/miscutil/: test_string_helpers.py
EbfUtil/tests/ebf_core/reflection/: test_attr_reflector.py  test_type_name.py
EbfUtil/tests/ebf_core/support/: cfg_helpers.py  unit_test_helpers_cfg.py
EbfUtil/tests/ebf_core/support/fixtures/: basic.toml  basic.yaml  cfg_svc_fixture.py
EbfUtil/tests/ebfutil/cfgutil/: test_cfg_merger.py  test_cfg_service.py  test_cfg_util.py
EbfUtil/tests/ebfutil/cfgutil/cfg_svc_tests/: test_api.py  test_load.py  test_store.py
EbfUtil/tests/ebfutil/cfgutil/cfg_svc_tests/handlers/: test_yaml.py
EbfUtil/tests/ebfutil/cfgutil/cfg_svc_tests/handlers/json/: test_json_handler.py  test_load.py
EbfUtil/tests/ebfutil/cfgutil/cfg_svc_tests/handlers/toml/: test_load.py  test_toml_handler.py
EbfUtil/tests/ebfutil/cfgutil/cfg_svc_tests/handlers/yaml/: test_load.py  test_yaml_handler.py
EbfUtil/tests/ebfutil/cfgutil/fixtures/: basic.json  cfg_svc_fixture.py  cgf_svc_fixture.py  with_comments.yaml
EbfUtil/tests/ebfutil/fileutil/: test_file_util.py
EbfUtil/tests/ebfutil/guards/: test_guards.py
EbfUtil/tests/fileutil/: test_file_util.py
EbfUtil/tests/guards/: test_guards.py
