[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ebf-domain"
version = "0.1.0"
description = "Base domain classes for EBF trading projects"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]