[build-system]
requires = ["uv_build>=0.4,<1"]
build-backend = "uv_build"

[project]
name = "ebf-domain"
version = "0.1.0"
description = "Base domain classes for any EBF DDD project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ebf-core",
    "tzdata>=2025.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv.sources]
ebf-core = { workspace = true }
