[build-system]
requires = ["uv_build>=0.4,<1"]
build-backend = "uv_build"

[project]
name = "ebf-trading"
version = "0.1.0"
description = "Trading application and services using EBF domain model"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "EBF" }]
keywords = ["trading", "options", "finance", "domain-driven"]

dependencies = [
  "ebf-core",
  "ebf-domain",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7.0",
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-cov>=5.0",
]

[tool.uv.sources]
ebf-core = { workspace = true }
ebf-domain = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "SIM", "ARG", "ERA", "PL", "PIE"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
