[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ebf_core"
version = "0.2.0"
description = "EBF utilities package (fileutil, guards, and more)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "EBF" }]
license = { text = "MIT" }
dependencies = [
  "typeguard>=4.0.0",
  "pyyaml>=6.0"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "mypy",
  "ruff",
  "types-PyYAML",
  "build",
  "twine"
]
